fixed image stretch issue

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,5 +1,5 @@
 .tab {
-  font-family: 'Amatic SC';
+  font-family: "Amatic SC";
   font-size: 40px;
   color: #008080;
   margin: 20px;
@@ -8,34 +8,35 @@
 .text {
   position: relative;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 .hide {
   visibility: hidden;
 }
 .step-height {
-  height: 250px;
+  height: 220px;
 }
 .position-2 {
   position: absolute;
-  left: 16%;
+  left: 18%;
 }
 
 .position-3 {
   position: absolute;
-  left: 67%;
+  right: 18%;
 }
 
 .common-top {
-  top: -275px;
+  top: -225px;
 }
 .first-top {
-  top: -330px;
+  top: -269px;
 }
 
 .position-1 {
   position: absolute;
-  left: 42%
+  left: 42%;
 }
 
 .steps {
@@ -47,15 +48,11 @@
   bottom: 0;
 }
 
-img {
-  margin-left: 10px;
-}
-
 .first-txt {
   position: absolute;
   top: 15px;
   font-size: 40px;
-  font-family: 'Amatic SC';
+  font-family: "Amatic SC";
 }
 
 .height {
@@ -64,19 +61,296 @@ img {
 .width {
   width: 50%;
 }
-@media screen and (max-height: 700px), (max-width: 500px) {
+
+@media screen and (max-width: 1493px) {
   .height {
-    height: 175px;
+    height: 280px;
   }
   .common-top {
-    top: -90px;
+    top: -162px;
   }
   .first-top {
-    top: -144px;
+    top: -212px;
   }
   .width {
     width: 50%;
   }
+  .position-1 {
+    left: 43% !important;
+  }
 }
-
-@media screen and (max-height: 699px) {}
+@media screen and (max-width: 1440px) {
+  .height {
+    height: 270px !important;
+  }
+  .common-top {
+    top: -154px !important;
+  }
+  .first-top {
+    top: -205px !important;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .height {
+    height: 260px !important;
+  }
+  .common-top {
+    top: -146px !important;
+  }
+  .first-top {
+    top: -195px !important;
+  }
+}
+@media screen and (max-width: 1340px) {
+  .height {
+    height: 250px !important;
+  }
+  .common-top {
+    top: -137px !important;
+  }
+  .first-top {
+    top: -188px !important;
+  }
+}
+@media screen and (max-width: 1290px) {
+  .height {
+    height: 240px !important;
+  }
+  .common-top {
+    top: -129px !important;
+  }
+  .first-top {
+    top: -179px !important;
+  }
+}
+@media screen and (max-width: 1235px) {
+  .height {
+    height: 230px !important;
+  }
+  .common-top {
+    top: -120px !important;
+  }
+  .first-top {
+    top: -171px !important;
+  }
+}
+@media screen and (max-width: 1180px) {
+  .height {
+    height: 220px !important;
+  }
+  .common-top {
+    top: -110px !important;
+  }
+  .first-top {
+    top: -162px !important;
+  }
+}
+@media screen and (max-width: 1150px) {
+  .height {
+    height: 210px !important;
+  }
+  .common-top {
+    top: -103px !important;
+  }
+  .first-top {
+    top: -153px !important;
+  }
+}
+@media screen and (max-width: 1066px) {
+  .position-1 {
+    left: 42% !important;
+  }
+  .position-2 {
+    left: 17% !important;
+  }
+  .position-3 {
+    right: 17% !important;
+  }
+}
+@media screen and (max-width: 980px) {
+  .position-1 {
+    left: 41% !important;
+  }
+  .position-2 {
+    left: 16% !important;
+  }
+  .position-3 {
+    right: 16% !important;
+  }
+}
+@media screen and (max-width: 890px) {
+  .position-1 {
+    left: 40% !important;
+  }
+  .position-2 {
+    left: 15% !important;
+  }
+  .position-3 {
+    right: 15% !important;
+  }
+}
+@media screen and (max-width: 780px) {
+  .position-1 {
+    left: 39% !important;
+  }
+  .position-2 {
+    left: 14% !important;
+  }
+  .position-3 {
+    right: 14% !important;
+  }
+}
+@media screen and (max-width: 680px) {
+  .position-1 {
+    left: 38% !important;
+  }
+  .position-2 {
+    left: 13% !important;
+  }
+  .position-3 {
+    right: 13% !important;
+  }
+}
+@media screen and (max-width: 620px) {
+  .position-1 {
+    left: 37% !important;
+  }
+  .position-2 {
+    left: 12% !important;
+  }
+  .position-3 {
+    right: 12% !important;
+  }
+}
+@media screen and (max-width: 580px) {
+  .position-1 {
+    left: 36% !important;
+  }
+  .position-2 {
+    left: 11% !important;
+  }
+  .position-3 {
+    right: 11% !important;
+  }
+}
+@media screen and (max-width: 520px) {
+  .position-1 {
+    left: 35% !important;
+  }
+  .position-2 {
+    left: 10% !important;
+  }
+  .position-3 {
+    right: 10% !important;
+  }
+}
+@media screen and (max-width: 480px) {
+  .position-1 {
+    left: 34% !important;
+  }
+  .position-2 {
+    left: 9% !important;
+  }
+  .position-3 {
+    right: 9% !important;
+  }
+}
+@media screen and (max-width: 470px) {
+  .position-1 {
+    left: 33% !important;
+  }
+  .position-2 {
+    left: 8% !important;
+  }
+  .position-3 {
+    right: 8% !important;
+  }
+}
+@media screen and (max-width: 440px) {
+  .height {
+    height: 200px !important;
+  }
+  .common-top {
+    top: -94px !important;
+  }
+  .first-top {
+    top: -144px !important;
+  }
+}
+@media screen and (max-width: 420px) {
+  .position-1 {
+    left: 32% !important;
+  }
+  .position-2 {
+    left: 7% !important;
+  }
+  .position-3 {
+    right: 7% !important;
+  }
+}
+@media screen and (max-width: 400px) {
+  .height {
+    height: 190px !important;
+  }
+  .common-top {
+    top: -85px !important;
+  }
+  .first-top {
+    top: -135px !important;
+  }
+}
+@media screen and (max-width: 380px) {
+  .height {
+    height: 180px !important;
+  }
+  .common-top {
+    top: -77px !important;
+  }
+  .first-top {
+    top: -127px !important;
+  }
+}
+@media screen and (max-width: 350px) {
+  .height {
+    height: 170px !important;
+  }
+  .common-top {
+    top: -68px !important;
+  }
+  .first-top {
+    top: -120px !important;
+  }
+}
+@media screen and (max-width: 340px) {
+  .height {
+    height: 160px !important;
+  }
+  .common-top {
+    top: -60px !important;
+  }
+  .first-top {
+    top: -110px !important;
+  }
+}
+@media screen and (max-width: 320px) {
+  .height {
+    height: 150px !important;
+  }
+  .common-top {
+    top: -52px !important;
+  }
+  .first-top {
+    top: -102px !important;
+  }
+}
+@media screen and (max-width: 300px) {
+  .height {
+    height: 140px !important;
+  }
+  .common-top {
+    top: -43px !important;
+  }
+  .first-top {
+    top: -93px !important;
+  }
+}
